--- a/APITest/pom.xml
+++ b/APITest/pom.xml
@@ -55,11 +55,13 @@
 			<artifactId>json-unit</artifactId>
 			<version>1.23.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
+   			<groupId>com.google.guava</groupId>
+    			<artifactId>guava</artifactId>
+   			<version>30.1.1-jre</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured-common -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
